# pyimager

./: .gitattributes  README.md  meson.build  pyproject.toml  test.py  test.segy
.github/workflows/: build_distributions.yml  run_test.yml
examples/: example.py  plane.py  spike.py  synlv.py
pyimager/: _io.h  _io.pxd  _io.pyx  cwp.pxd  filters.pyx  meson.build  par.pxd  plotting.py  segy.pxd  segy.pyx  su.pxd  synthetics.pyx
pyimager/su/: LICENSE.md  meson.build
pyimager/su/cwp/: meson.build  tempname.c
pyimager/su/cwp/include/: cwp.h
pyimager/su/main/: meson.build
pyimager/su/main/filters/: meson.build  su_filters.c  su_filters.h  subfilt.c  sufrac.c  sufwatrim.c  sukfilter.c  sukfrac.c
pyimager/su/main/synthetics_waveforms_testpatterns/: sukdsyn2d.c  susynlv.c  synthetics.h
pyimager/su/par/: VND.c  docpkge.c  filestat.c  getpars.c  meson.build  modeling.c  subcalls.c  syscalls.c
pyimager/su/par/include/: par.h
pyimager/su/su_lib/: fgetgthr.c  fgettr.c  fputtr.c  gen_header.py  meson.build  valpkge.c
pyimager/su/su_lib/include/: mkxdrhdrsub.c  segy.h
seispy/: _io.h  _io.pxd  _io.pyx  container.pxd  container.pyx  filters.pyx  meson.build  plotting.py  segy.pxd  segy.pyx  synthetics.pyx
seispy/filters/: __init__.py  _bandpass.pyx  meson.build
seispy/io/: __init__.pxd  __init__.pyx  bswap.h  byteswapping.pxd  byteswapping.pyx  meson.build  segy_standard.pxd  segy_standard.pyx
seispy/su/cwp/: tempname.c
seispy/su/cwp/include/: cwp.h
seispy/su/main/filters/: su_filters.h  subfilt.c  sudipfilt.c  suk1k2filter.c  sumedian.c  susmgauss2.c  susvdfilt.c
seispy/su/main/synthetics_waveforms_testpatterns/: meson.build  sukdsyn2d.c  susynlv.c  synthetics.h
seispy/su/su_lib/: fgethdr.c  fputgthr.c  hdrpkge.c  meson.build  qdefine.c
seispy/su/su_lib/include/: spy_trace.h
seispy/synthetics/: __init__.py  _plane.pyx  _spike.pyx  _synlv.pyx  meson.build
tests/: example.py  test_byteswapping.py  test_write_read.py
